--- a/templates/base.html
+++ b/templates/base.html
@@ -24,6 +24,7 @@
   {% endblock %}
 
   {% block corejs %}
+  <script src="https://kit.fontawesome.com/8c6dac4a35.js" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"
     integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
@@ -42,7 +43,7 @@
 
 <body>
   <header class="container-fluid fixed-top">
-    <div class="row">
+    <div id="topnav" class="row bg-white pt-lg-2 d-none d-lg-flex">
       <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
         <a href="{% url 'home' %}" class="nav-link main-logo-link">
           <h2 class="logo-font text-black my-0"><strong>Boutique</strong> Ado</h2>
